Sat Feb 02 12:47:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Tidy up tarball making script.

Sat Feb 02 12:44:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add faster implementation of expand
	  decider, using a regexp for the prefixes.
	* xappy/searchconnection_doctest2.txt: Test it.

Mon Jan 28 15:13:04 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py: Change the
	  storage of the settings from a file in the database directory to
	  be in a metadata.  This change allow the forthcoming replication
	  support to copy databases without losing their settings, and
	  should also be helpful when we implement remote database support.

Wed Jan 23 22:27:50 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Even newer xapian tarball - containing more
	  fixes from charlie for windows.

Wed Jan 23 16:04:12 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Update xapian
	  tarballs - mainly to get fixes for the build system on windows.

Thu Jan 10 00:28:26 UTC 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update to get latest archives.

Thu Jan 10 00:04:51 UTC 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update with new branchpoint.

Wed Jan 09 22:50:36 UTC 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update with version numbers for latest
	  branches.
	* libs/get_xapian.py: Update with details of latest tarballs, which
	  include OP_VALUE_GE and OP_VALUE_LE.
	* xappy/searchconnection.py: Allow None to be specified as the
	  begin or end or a range query - allows half ranges to be
	  specified.
	* xappy/searchconnection_doctest2.txt: Test passing None as the end
	  parameters of a range query.
