@@ -749,11 +749,21 @@ class SearchConnection(object):
         # Note: this code is basically duplicated in the IndexerConnection
         # class.  Move it to a shared location.
         assert self._index is not None
-        config_str = _log(self._index.get_metadata, '_xappy_config')
+        if hasattr(self._index, 'get_metadata'):
+            config_str = _log(self._index.get_metadata, '_xappy_config')
+        else:
+            config_str = ''
         if len(config_str) == 0:
-            self._field_actions = {}
-            self._field_mappings = _fieldmappings.FieldMappings()
-            return
+            # Backwards compatibility - the configuration used to be stored in
+            # a file.
+            config_file = _os.path.join(self._indexpath, 'config')
+            if not _os.path.exists(config_file):
+                self._field_actions = {}
+                self._field_mappings = _fieldmappings.FieldMappings()
+                return
+            fd = open(config_file, 'rb')
+            config_str = fd.read()
+            fd.close()
 
         (self._field_actions, mappings, next_docid) = _cPickle.loads(config_str)
         self._field_mappings = _fieldmappings.FieldMappings(mappings)
